# zs-skills

./: CLAUDE.md  README.md
ai-hot-picker/: SKILL.md
ai-hot-picker/scripts/: fetch_hot.py
dating-chat-coach/: SKILL.md  reference.md
fable-writer/: README.md  SKILL.md
kakarot-repurposer/: README.md  SKILL.md
kakarot-repurposer/scripts/: make_subtitles.py
kakarot-writer/: README.md  SKILL.md
kakarot-writer/references/: style_examples.md
life-designer/: README.md  SKILL.md
resume-optimizer/: README.md  SKILL.md
resume-optimizer/references/: resume-guide.md
system-structure-diagram-skill/: LICENSE  README.md  SKILL.md
system-structure-diagram-skill/agents/: openai.yaml
wechat-publisher/: .gitignore  README.md  SKILL.md
wechat-publisher/scripts/: generate_wechat_images.py
wechat-publisher/tests/: test_generate_images_script.py
wechat-publisher/tools/wechat-publisher/: .env.example  pyproject.toml
wechat-publisher/tools/wechat-publisher/tests/: test_assets.py  test_cli_helpers.py  test_client.py  test_formatter.py  test_secure_download.py  test_token.py
wechat-publisher/tools/wechat-publisher/wechat_publisher/: cli.py  client.py  config.py  formatter.py  image.py  models.py  secure_download.py  token.py
