[project]
name = "wechat-publisher"
version = "0.1.0"
description = "Markdown → WeChat Official Account draft publisher"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
wechat-publisher = "wechat_publisher.cli:main"
